# Fex-Interpreter

./: .clang-format  CMakeLists.txt  README.md
src/: arena.cpp  arena.h  ast_printer.h  error.cpp  error.h  expr.h  fex.cpp  fex.h  fog.h  interpreter.cpp  interpreter.h  main.cpp  parser.cpp  parser.h  runtime_error.h  scanner.cpp  scanner.h  token.cpp  token.h  utils.cpp  utils.h
tools/: generate_ast.py
